# ns3-iot-realisation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README  README.md  cmake_install.cmake  ns3-iot-realization.cbp
contrib/haraldott/: Makefile  cmake_install.cmake
contrib/haraldott/dash/: Makefile  cmake_install.cmake
examples/: Makefile  cmake_install.cmake
scratch/: Alyona.cc  CMakeLists.txt  Fignya.cc  ForAnjelika.cc  Makefile  NAT.cc  Wi-Fi+NATGate+IoT.cc  blockchain.json  cmake_install.cmake  codeForIlya.cc  ddos.cc  dnv.cc  first.cc  jsontest.cc  mitm.cc  multiple-iot.cc  nat-example.cc  ns3-documentation.md  one-iot+Wi-Fi.cc  one-iot-standart.cc  one-iot-with-mqtt.cc  one-iot-with-wifi.cc  one-iot.cc  one-iot_and_ddos.cc  one-iot_and_traffic-control.cc  onething.cc  scratch-simulator.cc  sniffer.cc  taskIlya.cc  test.cc  test.cpp
scratch/tangle/: attach_to_tangle.cpp  attach_to_tangle.h
scratch/test/: nat-example.cc  one-iot-with-mqtt.cc  one-iot-with-wifi.cc  wifi-plus-p2p.cc
src/: Makefile  cmake_install.cmake
src/antenna/: Makefile  cmake_install.cmake
src/aodv/: Makefile  cmake_install.cmake
src/applications/: CMakeLists.txt  Makefile  cmake_install.cmake
src/applications/helper/: tcp-echo-helper.cc  tcp-echo-helper.h
src/applications/model/: tcp-echo-client.cc  tcp-echo-client.h  tcp-echo-server.cc  tcp-echo-server.h
src/bitcoin/: CMakeLists.txt  Makefile  cmake_install.cmake
src/bitcoin/scratch/: bitcoin-test.cc  selfish-miner-test.cc
src/bitcoin/src/applications/helper/: bitcoin-topology-helper.cc  bitcoin-topology-helper.h  blockchain-node-helper.h  blockchain-node-helper.сс  blockchain-validator-helper.cc  blockchain-validator-helper.h
src/bitcoin/src/applications/model/: bandwidth-distributions.h  bitcoin-miner.cc  bitcoin-node.h  bitcoin-selfish-miner-trials.cc  bitcoin-selfish-miner.cc  bitcoin-simple-attacker.cc  bitcoin.cc  bitcoin.h  blockchain-node.cc  blockchain-node.h  blockchain-validator.cc  blockchain-validator.h  blockchain.cc  blockchain.h  gateway-node.cc  gateway-node.h  iot-sensor-node.cc  iot-sensor-node.h
src/bitcoin/src/internet/helper/: ipv4-address-helper-custom.h
src/bridge/: Makefile  cmake_install.cmake
src/brite/: Makefile  cmake_install.cmake
src/buildings/: Makefile  cmake_install.cmake
src/click/: Makefile  cmake_install.cmake
src/config-store/: Makefile  cmake_install.cmake
src/core/: Makefile  cmake_install.cmake
src/csma/: Makefile  cmake_install.cmake
src/csma-layout/: Makefile  cmake_install.cmake
src/dsdv/: Makefile  cmake_install.cmake
src/dsr/: Makefile  cmake_install.cmake
src/energy/: Makefile  cmake_install.cmake
src/flow-monitor/: Makefile  cmake_install.cmake
src/internet/: CMakeLists.txt  Makefile  cmake_install.cmake
src/internet-apps/: Makefile  cmake_install.cmake
src/internet-of-things/: CMakeLists.txt
src/internet-of-things/attacks/: sniffer-node.cc  sniffer-node.h
src/internet-of-things/model/: KillMePlz.cc  KillMePlz.h  iot-node-application.cc  iot-node-application.h  iotnode.cc  iotnode.h  sniffier-node.cc  sniffier-node.h
src/internet-of-things/mqtt/: mqtt-brocker-application.cc  mqtt-brocker-application.h  mqtt-client-application.cc  mqtt-client-application.h  mqtt-server-application.cc  mqtt-server-application.h
src/internet/helper/: ipv4-nat-helper.cc  ipv4-nat-helper.h
src/internet/model/: ipv4-nat.cc  ipv4-nat.h
src/lr-wpan/: Makefile  cmake_install.cmake
src/lte/: Makefile  cmake_install.cmake
src/mesh/: Makefile  cmake_install.cmake
src/mobility/: Makefile  cmake_install.cmake
src/mpi/: Makefile  cmake_install.cmake
src/netanim/: Makefile  cmake_install.cmake
src/network/: Makefile  cmake_install.cmake
src/nix-vector-routing/: Makefile  cmake_install.cmake
src/olsr/: Makefile  cmake_install.cmake
src/pahomqtt/: CMakeCache.txt  CPackConfig.cmake
src/pahomqtt/cmake/: PahoMqttCppConfig.cmake  cmake_install.cmake
src/pahomqtt/src/: Clients.h  Heap.h  LinkedList.h  MQTTAsync.h  MQTTClient.h  SHA1.h  SSLSocket.h  SocketBuffer.h  Thread.h  Tree.h
src/point-to-point/: Makefile  cmake_install.cmake
src/point-to-point-layout/: Makefile  cmake_install.cmake
src/point-to-point-layout/model/: point-to-point-star.cc  (+1 more)
src/propagation/: Makefile  cmake_install.cmake
src/sixlowpan/: Makefile  cmake_install.cmake
src/spectrum/: Makefile  cmake_install.cmake
src/stats/: Makefile  cmake_install.cmake
src/test/: Makefile  cmake_install.cmake
src/topology-read/: Makefile  cmake_install.cmake
src/traffic-control/: Makefile  cmake_install.cmake
src/uan/: Makefile  cmake_install.cmake
src/virtual-net-device/: Makefile  cmake_install.cmake
src/wave/: Makefile  cmake_install.cmake
src/wifi/: Makefile  cmake_install.cmake
src/wimax/: Makefile  cmake_install.cmake
utils/: Makefile  cmake_install.cmake
